# pdf_rv

./: .dockerignore  .editorconfig  .env.example  .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  run.py
app/routers/: credit_memos.py  invoices.py  kbank_statements.py  receive_vouchers.py  reconciliation.py  statement_router.py  uob_ca_statements.py
app/services/: browser_identity.py  credit_memo_extractor.py  credit_memo_importer.py  credit_memo_upload_jobs.py  document_core.py  invoice_extractor.py  invoice_importer.py  invoice_upload_jobs.py  kbank_statement_extractor.py  kbank_statement_importer.py  pdf_assembler.py  pdf_highlighter.py  pdf_splitter.py  receive_voucher_extractor.py  receive_voucher_importer.py  reconciliation.py  statement_importer.py  statement_upload_jobs.py  storage.py  uob_ca_statement_extractor.py  uob_ca_statement_importer.py  upload_job_common.py  upload_jobs.py  upload_worker.py
app/static/: browser_state.js  landing.css  ref_labels.js  styles.css
app/templates/: bank_statements.html  credit_memos.html  index.html  invoices.html  receive_vouchers.html
